<resources>
    <string name="app_name">Handshake</string>
    <string name="facebook_app_id">1572953773030793</string>

    <string name="hello_world">Hello World</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="settings_title">Profile</string>
    <string name="past_handshakes_title">Past Handshakes</string>
    <string name="settings_done_title">Done</string>
    <string name="first_name_settings">First Name</string>
    <string name="last_name_settings">Last Name</string>
    <string name="email_settings">Email</string>
    <string name="phone_number_settings">Phone Number</string>
    <string name="company_settings">Company</string>
    <string name="facebook_link_settings">Facebook Link</string>
    <string name="linkedin_name_settings">LinkedIn Name</string>

    <string-array name="profileSettings">
        <item>First Name</item>
        <item>Last Name</item>
        <item>Email</item>
        <item>Phone Number</item>
        <item>Company</item>
        <item>Facebook Link</item>
        <item>LinkedIn Name</item>
    </string-array>

    <string name="firstNameKey">USER_FIRST_NAME</string>
    <string name="lastNameKey">USER_LAST_NAME</string>
    <string name="emailKey">USER_EMAIL</string>
    <string name="phoneNumKey">USER_PHONE_NUMBER</string>
    <string name="companyKey">USER_COMPANY</string>
    <string name="facebookLinkKey">USER_FACEBOOK_LINK</string>
    <string name="linkedinNameKey">USER_LINKEDIN_NAME</string>

</resources>
